Bug 288651 - Paragraphs styles unsorted
Summary: Paragraphs styles unsorted
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.4-snapshots
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-10 13:03 UTC by Giuseppe Calà
Modified: 2013-01-01 16:11 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
styles unsorted (19.19 KB, image/png)
2011-12-10 13:03 UTC, Giuseppe Calà
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Giuseppe Calà 2011-12-10 13:03:54 UTC
Created attachment 66589 [details]
styles unsorted

Version:           2.4-snapshots (using KDE 4.7.3) 
OS:                Linux

Styles in paragraphs widget are unsorted or listed in a very strange manner. The attached image shows head2 and head3, not head1 that is below.

Reproducible: Always

Steps to Reproduce:
Open a new document

Actual Results:  
styles unsorted

Expected Results:  
styles sorted by name or relevance
Comment 1 Camilla Boemann 2011-12-10 13:07:57 UTC
Before going on with this styles widget you should know it will be replace before the release. so reporting now is a bit in vain
Comment 2 Giuseppe Calà 2011-12-10 13:11:55 UTC
Sorry, i didn't know this. I thought that you were in freeze phase, so bugs fixing only...
Comment 3 Camilla Boemann 2011-12-10 13:13:46 UTC
yes but as you have noted the widget is broken in so many ways that we have decided to replace it with a better implementation
Comment 4 Giuseppe Calà 2011-12-10 13:16:11 UTC
Perfect. Can you say if this new version will include 'New/Edit style' features?

Thanks.
Comment 5 Camilla Boemann 2011-12-10 13:23:32 UTC
it will _)
Comment 6 Gopalakrishna Bhat 2012-01-24 15:31:07 UTC
Tested with fe8420ee7bd16765be267e5df3e0384c9614d351 and found fixed. The new styles widget has fixed this.
Comment 7 Giuseppe Calà 2012-08-17 11:23:04 UTC
I've to reopen this bug since in version 2.5 paragraphs styles lack right sorting:

http://i.imgur.com/UVPOD.png
in red: blank item
in blue: isolated list paragraph:

http://i.imgur.com/7gIUA.png
in red: isolated list paragraph
in blue: "Contents 10" should follow "Contents 9"

http://i.imgur.com/pY7vZ.png
again: lone list paragraph
Comment 8 Camilla Boemann 2012-12-15 15:39:11 UTC
apart from 10 should follow 9 I don't see anything wrong, and even that can be debated

enumrated comes between document title and head. That looks correct to me
Comment 9 Giuseppe Calà 2012-12-16 11:42:34 UTC
What to say, imho "grouping styles"  should work better, or this is simple a problem of english version; probably when it will be fully localized in my language, italian, it will appear to me better organized; in italian I will read, for lists:

Elenco alfabetico
Elenco numerato
Elenco puntato

They'll be "grouped" by iteself.
Comment 10 Pierre Stirnweiss 2012-12-30 10:34:26 UTC
Git commit 36a0bd51606da12659519021c219a778fd77034a by Pierre Stirnweiss.
Committed on 30/12/2012 at 10:46.
Pushed by pstirnweiss into branch 'calligra/2.6'.

Fix sorting of style names.

The style names were not sorted in natural order.
Use KStringHandler::naturalCompare to fix the problem.

The sorting of styles per category (ie. list styles,...) belongs to
a wish item, and needs debating first.
REVIEW: 108020

Conflicts:
	plugins/textshape/dialogs/DockerStylesComboModel.cpp

Conflicts:
	plugins/textshape/dialogs/DockerStylesComboModel.cpp

M  +7    -6    plugins/textshape/dialogs/StylesModel.cpp

http://commits.kde.org/calligra/36a0bd51606da12659519021c219a778fd77034a
Comment 11 Pierre Stirnweiss 2012-12-30 10:35:09 UTC
Git commit bec31b80838bfbad62399997f6d6053228613ed2 by Pierre Stirnweiss.
Committed on 30/12/2012 at 10:43.
Pushed by pstirnweiss into branch 'master'.

Fix sorting of style names.

The style names were not sorted in natural order.
Use KStringHandler::naturalCompare to fix the problem.

The sorting of styles per category (ie. list styles,...) belongs to
a wish item, and needs debating first.
REVIEW: 108020

Conflicts:
	plugins/textshape/dialogs/DockerStylesComboModel.cpp

M  +9    -6    plugins/textshape/dialogs/DockerStylesComboModel.cpp
M  +7    -6    plugins/textshape/dialogs/StylesModel.cpp

http://commits.kde.org/calligra/bec31b80838bfbad62399997f6d6053228613ed2
Comment 12 Pierre Stirnweiss 2012-12-30 10:35:52 UTC
Git commit 7ea974af2415e3c4aa4ed6f4f2ce1c02f1e20b38 by Pierre Stirnweiss.
Committed on 30/12/2012 at 10:28.
Pushed by pstirnweiss into branch 'textshape-stylesWidget-PierreSt'.

Fix sorting of style names.

The style names were not sorted in natural order.
Use KStringHandler::naturalCompare to fix the problem.

The sorting of styles per category (ie. list styles,...) belongs to
a wish item, and needs debating first.
REVIEW: 108020

M  +7    -6    plugins/textshape/dialogs/DockerStylesComboModel.cpp
M  +7    -6    plugins/textshape/dialogs/StylesModel.cpp

http://commits.kde.org/calligra/7ea974af2415e3c4aa4ed6f4f2ce1c02f1e20b38
Comment 13 Pierre Stirnweiss 2013-01-01 16:11:25 UTC
Git commit ea4acc2dcf74fbc92d1fc6743f13f953c26cf508 by Pierre Stirnweiss.
Committed on 01/01/2013 at 14:40.
Pushed by pstirnweiss into branch 'master'.

Merge branch textshape-stylesWidget-PierreSt into master

The stylesCombo should now display the styles sorted per usage
with a category title.
There are also several bug fixes for the usage sorted combo list.

REVIEW: 108060

Squashed commit of the following:

commit ee16d3673044796823e974def00b6e98b355a75e
Merge: 966ad6d 10b83ff
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Jan 1 14:28:33 2013 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 966ad6d03ee3973ec46642429fb6d4f3706c9b75
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Jan 1 14:17:24 2013 +0100

    Fix paragraph style is applied twice regression.

    The paragraph style was applied twice because an old style signal
    was still used.

commit f4cabe5f51a119f931b2ff4832548c1f78f1087f
Merge: 5716300 cfb0253
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Jan 1 09:29:03 2013 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 5716300a666bb75c68247d8d114e3ee25638a626
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Dec 31 17:43:33 2012 +0100

    Correct logic of previous patch

commit 754306ae1c4ea4c7149be085da401860226f54e6
Merge: d968f8a 0260a75
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Dec 31 17:05:27 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit d968f8a2126c29e1b62b0c1af60c5700626a1584
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Dec 31 17:01:26 2012 +0100

    Remove default paragraph style from user visible lists.

    The default paragraph style was seen in user visible lists (as blank
    item). This style is not supposed to be user visible/selectable.

commit 3dadacea3d654738bb88d4a416c008611b0f5149
Merge: 7ea974a bec31b8
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Dec 30 11:37:21 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 7ea974af2415e3c4aa4ed6f4f2ce1c02f1e20b38
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Dec 30 10:28:29 2012 +0100

    Fix sorting of style names.

    The style names were not sorted in natural order.
    Use KStringHandler::naturalCompare to fix the problem.

    The sorting of styles per category (ie. list styles,...) belongs to
    a wish item, and needs debating first.
    REVIEW: 108020

commit cf59966417599a3de4b05a1470a6854ed358a2b6
Merge: 4c76a36 a23f73c
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Fri Dec 28 21:32:57 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 4c76a36083877e1a736bf5bbe3386cc6a9f4c150
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Fri Dec 28 21:28:16 2012 +0100

    Keep the proper style selection after a style moves from unused to used

    The view gets notified when the model is changed on moving a style
    from unused to used.

commit c43723909a9e32b5aa03786c46364d94ff3b9d4a
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Dec 23 19:46:42 2012 +0100

    Fix apply characterStyle to caret without selection

    REVIEW: 107878

commit 82c8d538979b6b5c7cb90c2a374cea49bdfc66a0
Merge: 4b81bbb 7deaf57
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Dec 23 14:15:57 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 4b81bbb44e2a2e662069dcf8264ef88a1825a9ab
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Dec 23 13:31:02 2012 +0100

    Fix clicking in a selection does not update the caret.

    Initialize m_drag in the TextTool solves the problem somehow.

    REVIEW: 107849

commit 23e7859fcdf7c9151d6767648e1a57bb8e726276
Merge: ab191fb 82b661c
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Dec 16 14:48:26 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit ab191fb238011a53af4867231422de3e61c3f89e
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Dec 16 14:46:54 2012 +0100

    tempo

commit 7e8816f0121afebd5ab538d1e00cc87baca0e423
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Dec 10 21:35:27 2012 +0100

    Initial steps at implementing category titles in the stylesCombo

commit fb0ff739d1c49b63a00a5f4d7e8e903b6c8c03b2
Merge: e8e9407 48ac948
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Dec 10 17:57:55 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit e8e9407c088577aff79e28cd2262c0f02c29cbc7
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 14:07:50 2012 +0100

    Clean up

commit 4a31b7e1fe79fbd959cadbcaeb33bafe115f6d6e
Merge: 677be5e fc4b005
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 13:54:43 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 677be5ea17fa68da4cd171ec5d0a5a7f1be87556
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Dec 1 13:21:13 2012 +0100

    Fix next style appears as modified after a list style

commit 31cdb8e0ad6ee2ea0a42894933a2db48c543aab1
Merge: bd699d1 f3ae109
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Wed Nov 28 18:28:01 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit bd699d1bbf8c837505ebe19c5c0fc7cbc307ca11
Merge: 15e1a5c c98e784
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Nov 27 20:14:12 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 15e1a5c348a09e516fa5b3e58525e9f4440060a1
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Tue Nov 27 17:58:17 2012 +0100

    Fix problems highlighted by C. Boemann

commit fe4de0d618eb6c6dd83ab07f8641f6e24cfd55fc
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Nov 26 18:43:33 2012 +0100

    Clean-up left-over

commit 1e40dfdc986eb2bc9114684a20aa5ec60db77d2d
Merge: ea8cdb0 82cc058
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 25 10:19:14 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit ea8cdb0e14e6805b4082ffd0929c8b1b344c82f4
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 15:02:15 2012 +0100

    Additional clean ups

commit 6308ed4fd70aa99ccd5214806f370423ca5b7015
Merge: d306e00 81b50ca
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 14:49:45 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit d306e009525c97d2c7e1706a47ec267d7e994c8c
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 24 14:48:09 2012 +0100

    Clean ups in the code

commit 231e717b0c1c7dbec984679e0fb07dc821f8e889
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 11 13:03:26 2012 +0100

    Fix another crash

commit c37b513c5b4f9c09345848f2885f4eac24791008
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Nov 11 12:42:08 2012 +0100

    Fix random crash.

commit 0a9c5e3464c39e45eeeb26b1c65643bdb63fca32
Merge: 8e675f4 e6c1c31
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 17:07:22 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit 8e675f4d1b66eda355e994c0c88b6ac67337bca3
Merge: bcb9fbd 6c7d9e1
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 15:54:06 2012 +0100

    Merge branch 'master' into textshape-stylesWidget-PierreSt

commit bcb9fbd767aa2c4b7e5670ab2546797e9cf3e42b
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sat Nov 10 15:52:53 2012 +0100

    Initial population of style, a tad further.

commit fbbcf132764ca9a60b59e46aa844df918aa8fd05
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Mon Oct 22 21:36:20 2012 +0200

    Add missing bits to previous commit

commit 889e39862888ef83dc052604746611c959352bf0
Author: Pierre Stirnweiss <pstirnweiss@googlemail.com>
Date:   Sun Oct 21 23:39:14 2012 +0200

    Create filter for stylesCombo in the docker

M  +1    -0    plugins/textshape/dialogs/AbstractStylesModel.h
M  +65   -3    plugins/textshape/dialogs/DockerStylesComboModel.cpp
M  +12   -0    plugins/textshape/dialogs/DockerStylesComboModel.h
M  +24   -10   plugins/textshape/dialogs/SimpleCharacterWidget.cpp
M  +1    -0    plugins/textshape/dialogs/SimpleCharacterWidget.h
M  +19   -9    plugins/textshape/dialogs/SimpleParagraphWidget.cpp
M  +1    -0    plugins/textshape/dialogs/SimpleParagraphWidget.h
M  +9    -1    plugins/textshape/dialogs/StylesCombo.cpp
M  +3    -0    plugins/textshape/dialogs/StylesCombo.h
M  +127  -36   plugins/textshape/dialogs/StylesDelegate.cpp
M  +11   -0    plugins/textshape/dialogs/StylesFilteredModelBase.cpp
M  +1    -0    plugins/textshape/dialogs/StylesFilteredModelBase.h
M  +44   -1    plugins/textshape/dialogs/StylesModel.cpp
M  +1    -0    plugins/textshape/dialogs/StylesModel.h

http://commits.kde.org/calligra/ea4acc2dcf74fbc92d1fc6743f13f953c26cf508