Fix sorting of style names.

The style names were not sorted in natural order.
Use KStringHandler::naturalCompare to fix the problem.

The sorting of styles per category (ie. list styles,...) belongs to
a wish item, and needs debating first.
BUG: 288651
REVIEW: 108020