plugins/textshape/dialogs/DockerStylesComboModel.cpp
@@ -24,6 +24,7 @@
 #include <KoStyleManager.h>
 
 #include <KLocale>
+#include <KStringHandler>
 
 #include <KDebug>
 
@@ -118,7 +119,7 @@ void DockerStylesComboModel::setStyleManager(KoStyleManager *sm)
                 for ( ; begin != m_usedStyles.end(); ++begin) {
                     if (m_sourceModel->index(*begin, 0, QModelIndex()).internalId() != -1) { //styleNone (internalId=-1) is a virtual style provided only for the UI. it does not exist in KoStyleManager
                         KoCharacterStyle *s = m_styleManager->characterStyle(m_sourceModel->index(*begin, 0, QModelIndex()).internalId());
-                        if (QString::localeAwareCompare(compareStyle->name(), s->name()) < 0) {
+                        if (KStringHandler::naturalCompare(compareStyle->name(), s->name()) < 0) {
                             break;
                         }
                     }
@@ -137,7 +138,7 @@ void DockerStylesComboModel::setStyleManager(KoStyleManager *sm)
                 for ( ; begin != m_usedStyles.end(); ++begin) {
                     if (m_sourceModel->index(*begin, 0, QModelIndex()).internalId() != -1) { //styleNone (internalId=-1) is a virtual style provided only for the UI. it does not exist in KoStyleManager
                         KoParagraphStyle *s = m_styleManager->paragraphStyle(m_sourceModel->index(*begin, 0, QModelIndex()).internalId());
-                        if (QString::localeAwareCompare(compareStyle->name(), s->name()) < 0) {
+                        if (KStringHandler::naturalCompare(compareStyle->name(), s->name()) < 0) {
                             break;
                         }
                     }
@@ -159,7 +160,7 @@ void DockerStylesComboModel::styleApplied(const KoCharacterStyle *style)
             for ( ; begin != m_usedStyles.end(); ++begin) {
                 if (m_sourceModel->index(*begin, 0, QModelIndex()).internalId() != -1) { //styleNone (internalId=-1) is a virtual style provided only for the UI. it does not exist in KoStyleManager
                     KoCharacterStyle *s = m_styleManager->characterStyle(m_sourceModel->index(*begin, 0, QModelIndex()).internalId());
-                    if (QString::localeAwareCompare(style->name(), s->name()) < 0) {
+                    if (KStringHandler::naturalCompare(style->name(), s->name()) < 0) {
                         break;
                     }
                 }
@@ -170,7 +171,7 @@ void DockerStylesComboModel::styleApplied(const KoCharacterStyle *style)
             QVector<int>::iterator begin = m_usedStyles.begin();
             for ( ; begin != m_usedStyles.end(); ++begin) {
                 KoParagraphStyle *s = m_styleManager->paragraphStyle(m_sourceModel->index(*begin, 0, QModelIndex()).internalId());
-                if (QString::localeAwareCompare(style->name(), s->name()) < 0) {
+                if (KStringHandler::naturalCompare(style->name(), s->name()) < 0) {
                     break;
                 }
             }
@@ -214,7 +215,7 @@ void DockerStylesComboModel::createMapping()
                         QVector<int>::iterator begin = m_unusedStyles.begin();
                         for ( ; begin != m_unusedStyles.end(); ++begin) {
                             KoParagraphStyle *style = m_styleManager->paragraphStyle(m_sourceModel->index(*begin, 0, QModelIndex()).internalId());
-                            if (QString::localeAwareCompare(paragStyle->name(), style->name()) < 0) {
+                            if (KStringHandler::naturalCompare(paragStyle->name(), style->name()) < 0) {
                                 break;
                             }
                         }
@@ -232,7 +233,7 @@ void DockerStylesComboModel::createMapping()
                         QVector<int>::iterator begin = m_unusedStyles.begin();
                         for ( ; begin != m_unusedStyles.end(); ++begin) {
                             KoCharacterStyle *style = m_styleManager->characterStyle(m_sourceModel->index(*begin, 0, QModelIndex()).internalId());
-                            if (QString::localeAwareCompare(charStyle->name(), style->name()) < 0) {
+                            if (KStringHandler::naturalCompare(charStyle->name(), style->name()) < 0) {
                                 break;
                             }
                         }
